# hello-rust-api

./: .env  .gitignore  Cargo.toml  docker-compose.yml  dot_env_sample
auth/: Cargo.toml
auth/src/: app.rs  config.rs  error.rs  main.rs  state.rs
auth/src/api/v1/: mod.rs  routes.rs
auth/src/api/v1/dto/: mod.rs  refresh_request.rs  token_request.rs  token_response.rs
auth/src/api/v1/handlers/: token.rs
auth/src/repos/: auth_session_repo.rs  error.rs  mod.rs  refresh_token_repo.rs
auth/src/services/auth/: access_token_issuer.rs  jwt.rs  mod.rs  refresh_token_issuer.rs  token_issuer.rs  token_service.rs
auth/src/services/auth/dpop/: ath.rs  error.rs  mod.rs  normalize.rs  policy.rs  thumbprint.rs  verifier.rs
dpop-gen/: Cargo.toml
dpop-gen/src/: main.rs
migrations/: 20260130091243_init.sql  20260226022642_refresh_token.sql
rs/: Cargo.toml
rs/src/: state.rs
rs/src/api/v1/: mod.rs  routes.rs
rs/src/api/v1/dto/: bookmarks.rs  users.rs
rs/src/api/v1/extractors/: mod.rs
rs/src/api/v1/extractors/auth_ctx/: mod.rs  types.rs
rs/src/api/v1/extractors/public_id/: core.rs  mod.rs  types.rs
rs/src/api/v1/handlers/: mod.rs  posts.rs
rs/src/domain/: bookmark.rs  mod.rs
rs/src/middleware/: cors.rs
rs/src/repos/: bookmark_repo.rs  mod.rs  user_repo.rs
rs/src/services/: mod.rs
rs/src/services/auth/: mod.rs
rs/src/services/auth/dpop/: types.rs
rs/src/services/auth/replay/: store.rs  valkey.rs
rs/src/services/cache/: mod.rs
src/: app.rs  config.rs  error.rs  main.rs  state.rs
src/api/: health.rs  mod.rs
src/api/v1/: mod.rs  routes.rs
src/api/v1/dto/: mod.rs  posts.rs  users.rs
src/api/v1/extractors/: mod.rs  public_id.rs
src/api/v1/extractors/auth_ctx/: core.rs
src/api/v1/extractors/public_id/: types.rs
src/api/v1/handlers/: bookmarks.rs  mod.rs  posts.rs  users.rs
src/domain/: ids.rs
src/middleware/: bearer_auth.rs  cors.rs  http.rs  mod.rs  security_headers.rs
src/middleware/auth/: access.rs
src/repos/: error.rs  mod.rs  post_repo.rs  user_repo.rs
src/services/: id_codec.rs  mod.rs
src/services/auth/: access_jwt.rs  factory.rs  mod.rs
src/services/auth/dpop/: core.rs
src/services/auth/replay/: mod.rs
src/services/cache/: client.rs  valkey.rs
