[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
dotenvy = "0.15.7"
getrandom = "0.4.1"
hex = "0.4.3"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
