[package]
name = "resource-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
josekit = "0.10.3"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs", "use_pem"], default-features = false }
redis = { version = "1.0.3", features = ["aio", "connection-manager", "tokio-comp"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqids = "0.4.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["timeout"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "cors", "set-header", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.20.0", features = ["serde", "v4"] }

