[package]
name = "resource-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { workspace = true }
base64 = { workspace = true }
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
josekit = "0.10.3"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs", "use_pem"], default-features = false }
redis = { version = "1.0.3", features = ["aio", "connection-manager", "tokio-comp"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
sqids = "0.4.2"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.5.3", features = ["timeout"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "cors", "set-header", "limit"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.8"
uuid = { workspace = true }
